--- a/welcomeHome/src/main/webapp/ch05/table.html
+++ b/welcomeHome/src/main/webapp/ch05/table.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <table style="display: inline-block; width: 50px;">
+    <table border="1" style= "width: 50px;" >
         <caption>회원가입</caption>
         <tbody>
             <tr>
@@ -86,6 +86,7 @@
                     <input type="date" name="year">
                 </td>
             </tr>
+
             <tr>
                 <td colspan="4"><input type="checkbox" name="sns" value= "sns" checked>메일을 수신합니다.</td>
             </tr>
@@ -93,8 +94,8 @@
                 <td colspan="4"><input type="checkbox" name="sns" value= "sns" checked>SMS을 수신합니다.</td>
             </tr>
             <tr>
-                <td colspan="2" style="background-color: darkslategray;"><input type="submit" value="가입취소"></td>
-                <td colspan="2" style="background-color: crimson;"><input type="submit" value="회원가입"></td>
+                <td colspan="2" ><input type="submit" style="color: rgb(80, 80, 80) ;" value="가입취소"></td>
+                <td colspan="2" ><input type="submit" style="background-color: crimson; " value="회원가입"></td>
             </tr>
         </form>
         </tbody>
