--- a/welcomeHome/src/main/webapp/javScript/function.html
+++ b/welcomeHome/src/main/webapp/javScript/function.html
@@ -5,42 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>functoin.html</title>
+    <script src=js/function.js></script>
 </head>
 <body>
- <input type="number" name="num1" id="num1"> +  
- <input type="number" name="num2" id="num2"> = 
- <input type="text" name="result" id="result">
- <p/>
- <button onclick="cal()">계산하기</button> 
+    <input type="number" name="num1" id="num1"> +  
+    <input type="number" name="num2" id="num2"> = 
+    <input type="text" name="result" id="result">
+    <p/>
+    <button onclick="cal()">계산하기</button> 
+   
+    <script>
+        function newFunc(args, args2){//매개변수
+            console.log('newFunc('+args+ ',' + args2 + ')');
+            // // let ary = [args, args2];
+            // let obj = {
+            //     name: args, //필드
+            //     age: args2,
+            //     showInfo: function (){ //메소드
+            //         return '이름: '+ this.name + ', 나이: ' +this.age;//this는 obj를 불러온다
+            //     }
+            // };
+            let str = '<li>' +args +', '+ args2+'</li>';
+            return str; 
+        }
 
- <script>
-     let a = 20;
-     console.log(a);
+        function makeList(arg){
+            let str = '<li id="id1">Hello</li>'; //nade => tag(element)
+            let li = document.createElement('li'); //element 생성
+            li.setAttribute('id', 'id1'); //attribute node를 추가
+            let text = document.createTextNode(arg) //textNode를 생성
+            li.appendChild(text); //<li>Hello</li>자식노드를 부모노드에 넣겠다.
 
-     function cal(){
-        let num1 = document.getElementById('num1');
-        let num2 = document.getElementById('num2');
-        console.log(Number(num1.value) + Number(num2.value));
-        let result = document.getElementById('result');
-        result.value =fnc(Number(num1.value), Number(num2.value)); 
-     }//
+            return li; //'<li id="id1">Hello</li>'
+        }
+        document.write('<ul>');
+        let result = newFunc('Hong', '12');
+        document.write(result);
+        document.write(newFunc('Hwnag','20'));
+        document.write('</ul>');
 
-     console.log('function정의 전: '+sum(20,30));
-     
-     let fnc = function(a,b){ // hoisting기능이 없다.
-        return a + b;
-    }
-    console.log('function정의 전: '+fnc(20,30));
-
-    console.log(fnc(15, 20));
-
-     function sum(num1, num2) { // hoisting: function정의문을 끌어올림
-        return num1 + num2;
-     }
-     let result = sum(10, 20);
-     console.log(result);
-     result = sum('Hello', 'World');
-     console.log(result);
- </script>
+        let ul = document.getElementsByTagName('ul');
+        ul[0].appendChild(makeList('Hello'));
+        ul[0].appendChild(makeList('World'));
+        //매개값
+        // console.log(typeof result, result, result.showInfo());
+    </script>
 </body>
 </html>
