--- a/welcomeHome/src/main/webapp/board/commentList.html
+++ b/welcomeHome/src/main/webapp/board/commentList.html
@@ -37,12 +37,13 @@
 		let div = document.createElement('div');
 		let id = comment.children[0].innerHTML;
 		div.setAttribute('id', id);//해당div의 id값을 comments테이블의 id값과 같이 하겠다.
-		let str = '<strong>'
-				+ comment.children[1].innerHTML
-				+ '</strong>'
-				+ comment.children[2].innerHTML
-				+ '<input type= "button" value= "수정" onclick= "viewUpdateForm('+id+')">'
-				+ '<input type= "button" value= "삭제" onclick= "confirmDeletion()">';
+		div.setAttribute('data-id', comment.children[0].innerHTML);
+		div.setAttribute('data-name', comment.children[1].innerHTML);
+		div.setAttribute('data-content', comment.children[2].innerHTML);
+		let str = '<strong>'+ comment.children[1].innerHTML
+				+ '</strong>'+ comment.children[2].innerHTML
+				+ '<input type= "button" value= "수정" onclick= "viewUpdateForm('+ id+ ')">'
+				+ '<input type= "button" value= "삭제" onclick= "confirmDeletion('+ id+ ')">';
 
 		div.innerHTML = str;
 
@@ -86,11 +87,77 @@
 		}
 
 	}
-	//수정보튼 클릭
-	function viewUpdateForm(id) {
+	//수정버튼 클릭
+	function viewUpdateForm(id) {//글번호의 div id
 		let updateFormDiv = document.getElementById('commentUpdate');
 		let commentDiv = document.getElementById(id);
 		console.log(commentDiv);
+		updateForm.id.value = commentDiv.dataset.id;
+		updateForm.name.value = commentDiv.dataset.name;
+		updateForm.content.value = commentDiv.dataset.content;
+		updateFormDiv.style.display = 'block';//수정화면보여줌
+		commentDiv.after(updateFormDiv);
+		document.getElementById('commentAdd').style.display = 'none';//등록화면
+	}
+	//변경
+	function updatecomment() {
+		let id = updateForm.id.value;
+		let name = updateForm.name.value;
+		let content = updateForm.content.value;
+		//1.DB병경2.화면변경
+		let url = '../CommentServlet?cmd=update&id=' + id + '&name=' + name
+				+ '&content=' + content;
+		let xhtp = new XMLHttpRequest();
+		xhtp.open('get', url);
+		xhtp.send();
+		xhtp.onload = updateResult;
+	}
+	//수정콜백함수
+	function updateResult() {
+		let xmlDoc = this.responseXML;
+		let code = xmlDoc.getElementsByTagName('code')[0].innerHTML;
+		if(code == 'success'){
+			let comment = xmlDoc.getElementsByTagName('data')[0];
+			let commentDiv = makeCommentView(comment);
+			let id = commentDiv.getAttribute('id');
+			let oldDiv = document.getElementById(id);
+			//replacechild:
+			let parent = document.getElementById('commentList');
+			parent.replaceChild(commentDiv, oldDiv);
+			
+			document.getElementById('commentUpdate').style.display = 'none';
+			document.getElementById('commentAdd').style.display = 'block';
+		}else if (code == 'error'){
+			alert('에러')
+		}
+	}
+	//취소
+	function cancelUpdate(){
+		document.getElementById('commentUpdate').style.display = 'none';
+		document.getElementById('commentAdd').style.display = 'block';
+	}
+	//삭제
+	function confirmDeletion(id){
+		let xhtp = new XMLHttpRequest();
+		xhtp.open('get', '../CommentServlet?cmd=delete&id=' + id);
+		xhtp.send();
+		xhtp.onload = deleteResult;
+	}
+	//삭제콜백
+	function deleteResult() {
+		let xmlDoc = this.responseXML;
+		console.log(xmlDoc)
+		let code = xmlDoc.getElementsByTagName('code')[0].innerHTML;
+		if(code == 'success'){
+			//document.getElementById().remove();
+			let id = xmlDoc.getElementsByTagName('data')[0].children[0].innerHTML;
+			console.log(id);
+			document.getElementById(id).remove();
+			window.alert('삭제완료')
+			
+		}else if(code == 'error'){
+			alert('에러')
+		}
 	}
 
 	//this=xhtp(이밴트객체)
@@ -110,8 +177,8 @@
 	<!-- 댓글수정화면 -->
 	<div id='commentUpdate' style="display: none;">
 		<form name='updateForm' action="">
-			<input type='hidden' name='id'> 이름: <input type='text'
-				name='name' size='10'><br> 내용:
+			<input type='hidden' name='id'> 이름: 
+			<input type='text'name='name' size='10'><br> 내용:
 			<textarea name='content' rows="3" cols="20"></textarea>
 			<br> <input type='button' value='변경' onclick='updatecomment()'>
 			<input type='button' value='취소' onclick='cancelUpdate()'>
